<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="main_activity_label">Github User\'s</string>
    <string name="follow">%d followers . %d following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="search_hint">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="detailTitle">Detail User</string>
    <string name="mainTitle">Github User\'s</string>
    <string name="avatar">Avatar</string>
    <string name="nightmode">Night Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarkTitle">Bookmark</string>

</resources>