<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailUserActivity">

    <ImageView
            android:contentDescription="@string/avatar"
            android:layout_width="150dp"
            android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/name"
            style="@style/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="187dp"
            android:layout_marginEnd="187dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="173dp" android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" android:layout_marginTop="4dp"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewUsername" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp" android:id="@+id/tableLayout2"
    >

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp" app:srcCompat="@drawable/outline_people_24" android:id="@+id/imageView2"
            />
            <TextView
                    android:text="@string/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewFollow"
                    android:layout_marginStart="4dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp" app:srcCompat="@drawable/outline_business_24" android:id="@+id/imageView4"
                    android:layout_marginTop="2dp"
            />
            <TextView
                    android:text="@string/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewCompany"
                    android:layout_marginStart="4dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp" app:srcCompat="@drawable/outline_place_24" android:id="@+id/imageView5"
                    android:layout_marginTop="2dp"
            />
            <TextView
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewLocation"
                    android:layout_marginStart="4dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp" app:srcCompat="@drawable/outline_library_books_24" android:id="@+id/imageView6"
                    android:layout_marginTop="2dp"
            />
            <TextView
                    android:text="@string/repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewRepository"
                    android:layout_marginStart="4dp"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:context=".MainActivity"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp">
        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white" app:layout_constraintBottom_toTopOf="@+id/view_pager"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>